<resources>

    <string name="notice_version_1_3_2">서울의 문화재 홈페이지의 폐쇄에 따라\n2012년 11월 15일부로 문화재정보 서비스\n일부가 중지되어 문화재 찾기 기능 제공을 중단합니다.</string>
    
    <string name="setting_version_title_20120830">2012.08.30 : 서울나들이 v1.0</string>
    <string name="setting_version_desc_20120830">• 공원 및 공원 프로그램 목록 조회\n• 공원 지도 표시\n• 공연 및 문화시설 목록 조회\n• 문화재 목록 조회\n• 각 메뉴별 검색 기능</string>
    <string name="app_name">서울나들이</string>
    
    <string name="menu_settings">설정</string>
    <string name="menu_about">프로그램 정보</string>
    
    <string name="loading_init">초기 설정 중 입니다</string>
    
    <string name="title_activity_splash">서울나들이</string>
    <string name="title_activity_main">서울나들이</string>
    <string name="title_activity_parks">서울 공원 정보</string>
    <string name="title_activity_parks_detail">공원 세부 정보</string>
    <string name="title_activity_parks_program">공원 프로그램 정보</string>
    <string name="title_activity_assets">서울 문화재 정보</string>
    <string name="title_activity_assets_detail">서울 문화재 세부 정보</string>
    <string name="title_activity_plays">서울 공연/문화시설 정보</string>
    <string name="title_activity_plays_detail">서울 공연/문화시설 세부 정보</string>
    <string name="title_activity_setting">설정</string>
    
    <string name="main_menu_park">공원 찾기</string>
    <string name="main_menu_play">공연/문화시설 찾기</string>
    <string name="main_menu_assets">문화재 찾기</string>
    
    <string name="input_search_keyword">검색어를 입력하세요.</string>
    
    <string name="search">검색</string>
    <string name="search_addr">주소검색</string>
    <string name="search_park">공원명검색</string>
    <string name="search_asset">문화재검색</string>
    <string name="park_zone">지역</string>
    <string name="park_addr">주소 : </string>
    <string name="park_division">관리 부서 : </string>
    <string name="park_phone">연락처 : </string>
    
    <string name="program_term">기간 : </string>
    <string name="program_day">요일 : </string>
    <string name="program_time">시간 : </string>
    <string name="program_person">대상 : </string>
    <string name="program_max">인원 : </string>
    
    <string name="assets_clss">분류 : </string>
    <string name="assets_cultasstk">문화재명(한글) : </string>
    <string name="assets_cultassth">문화재명(한자) : </string>
    <string name="assets_assignnum">지정번호 : </string>
    <string name="assets_assignymd">지정연월일 : </string>
    <string name="assets_period">시대 : </string>
    <string name="assets_scale">규모 : </string>
    <string name="assets_material">재료 : </string>
    <string name="assets_classify">종별 : </string>
    <string name="assets_binding">장정 : </string>
    <string name="assets_quantity">수량 : </string>
    <string name="assets_sizing">크기 : </string>
    <string name="assets_owner">소유자 : </string>
    <string name="assets_location">소재지 : </string>
    <string name="assets_designer">설계자 : </string>
    <string name="assets_builder">시공자 : </string>
    <string name="assets_holder">보유자 : </string>
    <string name="assets_successor">전승자 : </string>
    <string name="assets_etc_clss">천연기념물분류 : </string>
    <string name="assets_assignetc">부속문화재 : </string>
    
    <string name="option_main_facil">문화시설</string>
    <string name="option_main_play">공연</string>
    <string name="option_main_facil_theme">테마</string>
    <string name="option_main_facil_subj">주제</string>
    <string name="option_sub_name">이름검색</string>
    <string name="option_sub_loc">장소검색</string>
 
    <string name="play_agelimit">연령 : </string>
    <string name="play_date">일정 : </string>
    <string name="play_homepage">홈페이지 : </string>
    <string name="play_inquiry">문의 : </string>
    <string name="play_mdfydate">정보수정일자 : </string>
    <string name="play_org_link">원문링크 : </string>
    <string name="play_place">장소 : </string>
    <string name="play_player">출연자정보 : </string>
    <string name="play_rgstdate">정보제공일자 : </string>
    <string name="play_sponsor">스폰서 : </string>
    <string name="play_support">주관 및 후원 : </string>
    <string name="play_ticket">티켓 : </string>
    <string name="play_time">시간 : </string>
    <string name="play_title">제목 : </string>
    <string name="play_use_fee">이용요금 : </string>
    <string name="play_use_trgt">이용대상 : </string>
    <string name="play_etc_desc">기타내용 : </string>
    <string name="free">무료 </string>
    <string name="nonfree">유료 </string>
    
    <string name="facil_name">시설명 : </string>
    <string name="facil_addr">주소 : </string>
    <string name="facil_sido">시도 : </string>
    <string name="facil_gngu">군구 : </string>
    <string name="facil_dong">읍면동 : </string>
    <string name="facil_bon_bun">본번 : </string>
    <string name="facil_bu_bun">부번 : </string>
    <string name="facil_phne">전화번호 : </string>
    <string name="facil_fax">팩스번호 : </string>
    <string name="facil_homepage">홈페이지 : </string>
    <string name="facil_openhour">관람시간 : </string>
    <string name="facil_entr_fee">관람료 : </string>
    <string name="facil_closeday">휴관일 : </string>
    <string name="facil_open_day">개관일자 : </string>
    <string name="facil_seat_cnt">객석숙 : </string>
    <string name="facil_etc_desc">기타사항 : </string>
    <string name="facil_fac_desc">시설소개 : </string>
    <string name="facil_entrfree">무료구분 : </string>
    
    <string name="traffic_info">교통정보</string>
    
    <string name="setting_cache">캐시 설정</string>
    <string name="setting_cache_init">디스크 캐시 초기화</string>
    <string name="setting_cache_init_desc">현재 저장된 이미지 캐시 정보를 초기화합니다.</string>
    <string name="setting_cache_enable">디스크 캐시 사용</string>
    <string name="setting_cache_enable_desc">다운로드한 이미지 정보를 디스크 캐시에 저장하도록 설정합니다.</string>
    <string name="setting_version">버전 정보</string>
    <string name="setting_intro">프로그램 소개</string>
    <string name="setting_intro_desc">본 프로그램은 서울시 열린 데이터 광장에서 제공하는 OpenAPI를 기반으로 공원, 공연 및 문화시설, 문화재 정보를 찾아보기 편리하게 제공하고자 제작되었습니다.</string>
    <string name="setting_author">• 제작자 e-mail : vicevil4@gmail.com</string>
    <string name="setting_report">• 사용 중 불편한 점이나 문제점을 위 메일로 알려주시면 검토 후 적극 반영하겠습니다. 감사합니다.</string>
    <string name="setting_current_version">현재버전</string>
    
    <string name="alert_btn_confirm">승인</string>
    <string name="alert_btn_close">닫기</string>
    <string name="alert_btn_cancel">취소</string>
    <string name="alert_title_language">문화재 언어 변경</string>
    <string name="alert_msg_access_location">서울나들이에서 현재위치 정보를 사용하고자 합니다.</string>
    <string name="alert_msg_location_service">현재위치를 확인하기 위해서는 시스템 설정에서 \'내 위치\' 소스를 사용하도록 설정해야 합니다.</string>
    <string name="alert_msg_delete_diskcache">현재 저장된 이미지 캐시 파일이 모두 삭제됩니다.\n계속 진행하시겠습니까?</string>
    <string name="alert_msg_delete_diskcache_ok">디스크 캐시 초기화 완료</string>
    <string name="empty_park_program">현재 진행 중인 프로그램이 없습니다.</string>
    <string name="failed_request">요청이 실패하였습니다. 다시 시도해주세요.</string>
    <string name="empty_data">표시할 정보가 없습니다.</string>
    <string name="empty_media">표시할 미디어 정보가 없습니다.</string>
    <string name="empty_homepage">홈페이지 정보가 없습니다.</string>
    <string name="empty_org_link">링크 정보가 없습니다.</string>
    <string name="empty_callphone">전화번호 정보가 없습니다.</string>
    <string name="empty_traffic">교통 정보가 없습니다.</string>
    
    <string name="warning_3g">정보이용 시 데이터요금이 과다청구될 수 있습니다.\n전용요금제나 무선랜을 이용해주세요.</string>
    
    <string name="total">전체</string>
    <string name="assets">문화재</string>
    
</resources>